# hiccup

./: .gitignore  BSParse.hs  CmdList.hs  Common.hs  Core.hs  EventMgr.hs  Expr.hs  Format.hs  Hiccup.hs  Main.hs  MathOp.hs  RToken.hs  TclErr.hs  TclObj.hs  TclParse.hs  Tests.hs  Util.hs  VarName.hs  hiccup.cabal  stack.yaml  test.sh
Expr/: Compile.hs  Eval.hs  Parse.hs  TExp.hs  Util.hs
Internal/: InterpSpec.hs  Types.hs  Util.hs
Proc/: CodeBlock.hs  Compiled.hs  Util.hs
TclLib/: ControlCmds.hs  CoreCmds.hs  IOCmds.hs  Interp.hs  LibUtil.hs  MathProcs.hs  StringCmds.hs
attic/: Accessor.hs  AccessorM.hs  Hash.hs
exec/: Main.hs
wiki/: Description.wiki
